Carousel styles and mobile header z-index fix

--- a/src/components/Header/MobileHeader/SideDrawer/SideDrawer.module.scss
+++ b/src/components/Header/MobileHeader/SideDrawer/SideDrawer.module.scss
@@ -14,7 +14,7 @@
         top:0;
         left:0;
         top:3.125rem;
-        // z-index:200;
+        z-index:100;
         transition:transform 0.3s ease-out;
     }
     .open{
