--- a/src/components/Info/Info.module.scss
+++ b/src/components/Info/Info.module.scss
@@ -6,8 +6,8 @@
         height:100%;
         margin:0 auto;
         display:grid;
-        grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
-        grid-template-rows:repeat(200px);
+        grid-template-columns: repeat(auto-fit,minmax(200px,350px));
+        grid-template-rows:repeat(2,200px);
         grid-gap:40px 20px ;
         align-content:center;
         justify-content: center;
